opam-version: "2.0"
version: "0.4"
license: "MIT"
maintainer: "simon.cruanes.2007@m4x.org"
author: "Simon Cruanes"
homepage: "https://github.com/c-cube/linol"
synopsis: "LSP server library (with Lwt for concurrency)"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" { >= "2.0" }
  "linol" { = version }
  "jsonrpc" { >= "1.4" & < "1.6" }
  "lwt" { >= "5.1" & < "6.0" }
  "base-unix"
  "yojson" { >= "1.6" }
  "ocaml" { >= "4.08" }
  "odoc" { with-doc }
]
tags: [ "lsp" "server" "lwt" "linol" ]
bug-reports: "https://github.com/c-cube/linol/issues"
dev-repo: "git+https://github.com/c-cube/linol.git"


