opam-version: "2.0"
version: "0.1"
maintainer: "simon.cruanes.2007@m4x.org"
author: "Simon Cruanes"
homepage: "https://github.com/c-cube/linol"
synopsis: "LSP server library"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" { >= "2.0" }
  "containers" { >= "3.0" & < "4.0" }
  "yojson" { >= "1.6" }
  "lsp" { >= "1.4" & < "1.5" }
  "ocaml" { >= "4.08" }
  "odoc" { with-doc }
]
tags: [ "lsp" "server" "lwt" ]
bug-reports: "https://github.com/c-cube/linol/issues"
dev-repo: "git+https://github.com/c-cube/linol.git"


