opam-version: "2.0"
version: "0.4"
maintainer: "simon.cruanes.2007@m4x.org"
license: "MIT"
author: "Simon Cruanes"
homepage: "https://github.com/c-cube/linol"
synopsis: "LSP server library"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" { >= "2.0" }
  "yojson" { >= "1.6" }
  "logs"
  "lsp" { >= "1.14" & < "1.15" }
  "ocaml" { >= "4.12" }
  "odoc" { with-doc }
]
tags: [ "lsp" "server" "lwt" ]
bug-reports: "https://github.com/c-cube/linol/issues"
dev-repo: "git+https://github.com/c-cube/linol.git"


